# serenity-fh

./: CMakeLists.txt  README.md
capnp/: serenity-fh.capnp  serenity-fh.capnp.c++  serenity-fh.capnp.h
cmake/: FindIXWebSocket.cmake
src/: coinbase_main.cpp
